config/k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: post
  name: post
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: post
    spec:
      containers:
      - image: reckue/post:latest
        name: post
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: post
  name: post
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: post
  type: ClusterIP
status:
  loadBalancer: {}
