config/k8s/template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: post
  name: post
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post
  strategy: {}
  template:
    metadata:
      labels:
        app: post
    spec:
      containers:
      - image: reckue/post:latest
        name: post
        resources:
          requests:
            memory: 100Mi
          limits:
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: post
  name: post
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: post
  type: ClusterIP
