config/k8s/network1-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: network1
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/network1: "true"
  podSelector:
    matchLabels:
      io.kompose.network/network1: "true"
